Fix responsive bug in safari

--- a/resources/assets/sass/layout/_layout.sass
+++ b/resources/assets/sass/layout/_layout.sass
@@ -17,13 +17,14 @@
 		width: 780px
 		transition: width .3s ease
 
+	.row-3
+		display: block
+		width: 100%
+
 @media (max-width: 800px)
 	.wrap
 		width: 680px
 
-	div.row-3
-		display: block
-		width: 100%
 
 @media (max-width: 600px)
 	.wrap
