--- a/www/css/index.css
+++ b/www/css/index.css
@@ -23,14 +23,14 @@ p {
 @media (max-width: 1080px) {
   .wrap {
     width: 780px;
-    transition: width 0.3s ease; } }
+    transition: width 0.3s ease; }
+  .row-3 {
+    display: block;
+    width: 100%; } }
 
 @media (max-width: 800px) {
   .wrap {
-    width: 680px; }
-  div.row-3 {
-    display: block;
-    width: 100%; } }
+    width: 680px; } }
 
 @media (max-width: 600px) {
   .wrap {
@@ -133,8 +133,6 @@ p {
 
 .about {
   text-align: center;
-  display: table;
-  width: 100%;
   padding-bottom: 60px; }
 
 .about__heading {
@@ -143,11 +141,10 @@ p {
   margin: 50px 0; }
 
 .about__picture {
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease; }
+  transition: all 0.3s ease;
+  margin: 0 50px; }
 
 .about__info, .about__picture {
-  display: table-cell;
   vertical-align: middle; }
 
 .about__info__heading {
@@ -162,18 +159,22 @@ p {
   .about__picture {
     -webkit-transform: scale(0.8);
     transform: scale(0.8);
-    transition: -webkit-transform 0.3s ease;
-    transition: transform 0.3s ease; } }
+    margin: 0 30px;
+    transition: all 0.3s ease; } }
 
-@media (max-width: 800px) {
+@media (max-width: 1080px) {
   .about__info__text {
     width: 70%;
     margin: 0 auto;
-    transition: width 0.3s ease; } }
+    transition: width 0.3s ease; }
+  .about__picture {
+    margin: 30px 0; } }
 
 @media (max-width: 600px) {
   .about__info__text {
     width: 100%;
-    transition: width 0.3s ease; } }
+    transition: width 0.3s ease; }
+  .about__picture {
+    margin: 15px 0; } }
 
 /*# sourceMappingURL=index.css.map */
