--- a/resources/assets/sass/modules/_about.sass
+++ b/resources/assets/sass/modules/_about.sass
@@ -1,7 +1,5 @@
 .about
 	text-align: center
-	display: table
-	width: 100%
 	padding-bottom: 60px
 
 .about__heading
@@ -10,10 +8,10 @@
 	margin: 50px 0
 
 .about__picture
-	transition: transform .3s ease
+	transition: all .3s ease
+	margin: 0 50px
 
 .about__info, .about__picture
-	display: table-cell
 	vertical-align: middle
 
 .about__info__heading
@@ -27,15 +25,22 @@
 @media (max-width: 1300px)
 	.about__picture
 		transform: scale( .8 )
-		transition: transform .3s ease
+		margin: 0 30px
+		transition: all .3s ease
 
-@media (max-width: 800px)
+@media (max-width: 1080px)
 	.about__info__text
 		width: 70%
 		margin: 0 auto
 		transition: width .3s ease
 
+	.about__picture
+		margin: 30px 0
+
 @media (max-width: 600px)
 	.about__info__text
 		width: 100%
 		transition: width .3s ease
+
+	.about__picture
+		margin: 15px 0
