Add intothevoid section

--- a/resources/assets/sass/index.sass
+++ b/resources/assets/sass/index.sass
@@ -9,3 +9,5 @@
 @import "modules/btn"
 @import "modules/recent-blog"
 @import "modules/contact"
+@import "modules/intothevoid"
+@import "modules/footer"
