--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,429 +1,2 @@
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Montserrat';
-  font-weight: 700;
-  text-transform: uppercase; }
-
-p {
-  font-family: "Lato"; }
-
-hr {
-  border: 1px solid #ec6759;
-  width: 100px; }
-
-.wrap {
-  width: 1200px;
-  margin: 0 auto;
-  transition: width 0.3s ease; }
-
-.row-3 {
-  display: inline-block;
-  vertical-align: middle;
-  width: 30%; }
-
-@media (max-width: 1300px) {
-  .wrap {
-    width: 1000px;
-    transition: width 0.3s ease; } }
-
-@media (max-width: 1080px) {
-  .wrap {
-    width: 780px;
-    transition: width 0.3s ease; }
-  .row-3 {
-    display: block;
-    width: 100%; } }
-
-@media (max-width: 800px) {
-  .wrap {
-    width: 680px; } }
-
-@media (max-width: 600px) {
-  .wrap {
-    width: 100%;
-    padding: 0 20px;
-    box-sizing: border-box;
-    transition: width 0.3s ease; } }
-
-.section {
-  padding-top: 50px; }
-
-.section__heading {
-  text-align: center;
-  font-size: 14px;
-  margin-bottom: 50px; }
-
-.header {
-  background-color: #2e2e2e;
-  height: 700px;
-  text-align: center;
-  display: table;
-  width: 100%;
-  color: #f0f0f1; }
-
-.header__content {
-  display: table-cell;
-  vertical-align: middle; }
-
-.header__logo--image {
-  display: block;
-  margin: 0 auto 25px; }
-
-.header__logo--text {
-  font-size: 14px;
-  display: inline-block;
-  position: relative;
-  letter-spacing: 4px;
-  margin-bottom: 50px; }
-  .header__logo--text::before, .header__logo--text::after {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 2px;
-    background-color: #ec6759; }
-  .header__logo--text::before {
-    top: -10px; }
-  .header__logo--text::after {
-    bottom: -11px; }
-
-.welcome__greeting {
-  text-transform: uppercase;
-  font-weight: 900;
-  letter-spacing: 1px;
-  font-size: 14px; }
-
-.welcome__about {
-  font-size: 14px;
-  font-weight: 300;
-  max-width: 430px;
-  margin: 0 auto;
-  line-height: 1.5;
-  margin-bottom: 60px; }
-
-.contact-btn {
-  color: #f0f0f1;
-  border: 2px solid #ec6759;
-  border-radius: 6px;
-  display: inline-block;
-  padding: 17px 45px;
-  font-size: 11px;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-family: "Montserrat";
-  font-weight: 700;
-  position: relative;
-  overflow: hidden; }
-  .contact-btn .contact-btn__text {
-    position: relative;
-    z-index: 2; }
-  .contact-btn .contact-btn__bg {
-    background-color: #ec6759;
-    position: absolute;
-    top: 150%;
-    bottom: 150%;
-    left: 0;
-    right: 0;
-    -webkit-transform: rotate(25deg);
-    transform: rotate(25deg);
-    transition: all 0.3s ease;
-    z-index: 1; }
-  .contact-btn:hover .contact-btn__bg {
-    bottom: -30%;
-    left: -40%;
-    right: -40%;
-    top: -30%;
-    transition: all 0.3s ease; }
-
-.scrolldown-btn {
-  background: url("../img/scroll-arrow.svg");
-  display: block;
-  width: 45px;
-  height: 45px;
-  border: none;
-  margin: 0 auto;
-  margin-top: 80px; }
-
-.about {
-  text-align: center;
-  padding-bottom: 60px; }
-
-.about__picture {
-  transition: all 0.3s ease;
-  margin: 0 50px; }
-
-.about__info, .about__picture {
-  vertical-align: middle; }
-
-.about__info__heading {
-  font-size: 13px; }
-
-.about__info__text {
-  font-size: 13px;
-  line-height: 1.8;
-  transition: width 0.3s ease; }
-
-@media (max-width: 1300px) {
-  .about__picture {
-    -webkit-transform: scale(0.8);
-    transform: scale(0.8);
-    margin: 0 30px;
-    transition: all 0.3s ease; } }
-
-@media (max-width: 1080px) {
-  .about__info__text {
-    width: 70%;
-    margin: 0 auto;
-    transition: width 0.3s ease; }
-  .about__picture {
-    margin: 30px 0; } }
-
-@media (max-width: 600px) {
-  .about__info__text {
-    width: 100%;
-    transition: width 0.3s ease; }
-  .about__picture {
-    margin: 15px 0; } }
-
-.recent-works {
-  background-color: #465256;
-  height: 400px; }
-  .recent-works .section__heading {
-    color: #f0f0f1; }
-
-.btn {
-  font-family: 'Montserrat';
-  font-weight: 600;
-  font-size: 11px;
-  color: #fff;
-  background-color: #ec6759;
-  text-transform: uppercase;
-  border-radius: 6px;
-  margin: 60px auto;
-  padding: 15px 25px;
-  display: inline-block;
-  letter-spacing: 1px;
-  text-decoration: none;
-  overflow: hidden;
-  position: relative;
-  border: 2px solid #ec6759;
-  transition: all 0.3s; }
-  .btn:hover {
-    color: #2e2e2e; }
-    .btn:hover .btn__bg {
-      left: -100%;
-      top: -100%;
-      bottom: -100%;
-      right: -100%; }
-
-.btn__text {
-  position: relative;
-  z-index: 100; }
-
-.btn__bg {
-  position: absolute;
-  z-index: 50;
-  top: 150%;
-  left: 0;
-  right: 0;
-  bottom: 150%;
-  -webkit-transform: rotate(-25deg);
-  transform: rotate(-25deg);
-  background-color: #fff;
-  transition: all 0.4s ease; }
-
-.blog {
-  text-align: center; }
-
-.blog__post:nth-child(2) {
-  margin: 0 55px;
-  transition: margin 0.3s ease; }
-
-.blog__post__heading {
-  font-size: 13px;
-  text-align: center; }
-
-.blog__post__heading__link {
-  color: inherit;
-  text-decoration: none; }
-
-.blog__post__date {
-  font-size: 11px;
-  text-transform: uppercase;
-  font-family: "Montserrat";
-  text-align: center; }
-
-.blog__post__header-separator {
-  border: 1px solid #ec6759;
-  width: 100px; }
-
-.blog__post__body {
-  font-size: 13px;
-  font-family: "Lato";
-  line-height: 1.8;
-  margin-top: 25px;
-  text-align: left; }
-  .blog__post__body em {
-    font-style: italic;
-    font-weight: 900; }
-
-.blog__post__footer {
-  padding-top: 15px;
-  text-align: center; }
-
-.blog__post__footer__link {
-  font-size: 11px;
-  font-family: "Montserrat";
-  font-weight: 900;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #000;
-  position: relative; }
-  .blog__post__footer__link::after {
-    content: " ";
-    display: block;
-    position: absolute;
-    bottom: -2px;
-    left: 52%;
-    right: 52%;
-    height: 2px;
-    background-color: #ec6759;
-    transition: all 0.2s ease; }
-  .blog__post__footer__link:hover {
-    color: #2e2e2e;
-    transition: all 0.2s; }
-  .blog__post__footer__link:hover::after {
-    left: 0;
-    right: 0;
-    transition: all 0.2s ease; }
-
-@media (max-width: 1300px) {
-  .blog__post:nth-child(2) {
-    margin: 0 30px;
-    transition: margin 0.3s ease; } }
-
-@media (max-width: 1080px) {
-  .blog__post {
-    display: none; }
-  .blog__post:first-child {
-    display: block; }
-  .blog__post__body {
-    width: 70%;
-    margin: 25px auto 0; } }
-
-@media (max-width: 600px) {
-  .blog__post__body {
-    width: 100%;
-    text-align: center; } }
-
-.contact {
-  background-color: #465256;
-  color: #fff;
-  text-align: center; }
-  .contact .section__heading {
-    color: #fff; }
-
-.contact__info,
-.contact__social {
-  margin-top: -150px;
-  vertical-align: middle; }
-
-.contact__info__heading,
-.contact__social__heading {
-  font-size: 13px;
-  text-align: center; }
-
-.contact__info__body {
-  font-size: 13px;
-  line-height: 1.8;
-  width: 80%;
-  margin: 0 auto; }
-  .contact__info__body a {
-    color: inherit;
-    font-weight: 400; }
-
-.contact__form {
-  margin: 0 55px;
-  transition: margin 0.3s ease; }
-
-label {
-  display: block;
-  text-align: left;
-  text-transform: uppercase;
-  font-family: "Montserrat";
-  font-size: 12px;
-  margin-bottom: 5px; }
-
-.contact__form input,
-.contact__form textarea {
-  display: block;
-  background-color: #394549;
-  border: none;
-  width: 100%;
-  padding: 10px 10px 11px;
-  font-size: 14px;
-  border-right: 5px solid #394549;
-  border-left: 5px solid #394549;
-  border-radius: 6px;
-  transition: border-color 0.3s ease;
-  box-sizing: border-box;
-  margin-bottom: 20px;
-  font-family: "Lato"; }
-  .contact__form input:focus,
-  .contact__form textarea:focus {
-    outline: none;
-    border-color: #2e383c;
-    transition: border-color 0.3s ease; }
-
-.contact__form textarea {
-  resize: none; }
-
-.contact__form .btn {
-  margin-top: 20px; }
-
-.contact__form .btn__bg {
-  background: #465256; }
-
-.contact__form .btn__text {
-  color: #fff; }
-
-.contact__form .btn:hover .btn__text {
-  color: #fff; }
-
-.contact__social a {
-  text-decoration: none;
-  display: inline-block;
-  margin: 10px 5px; }
-
-.contact__social a path {
-  fill: #2e383c;
-  transition: fill 0.3s ease; }
-
-.contact__social a:hover path {
-  fill: #fff;
-  transition: fill 0.3s ease; }
-
-@media (max-width: 1300px) {
-  .contact__form {
-    margin: 0 30px;
-    transition: margin 0.3s ease; } }
-
-@media (max-width: 1080px) {
-  .contact {
-    padding-bottom: 50px; }
-  .contact__info {
-    display: none; }
-  .contact__social {
-    margin-top: 0; }
-  .contact__info__body {
-    width: 70%;
-    font-size: 14px; }
-  .contact__form {
-    margin: 50px 0; }
-  .contact__form input,
-  .contact__form textarea {
-    font-size: 16px; }
-  .contact__form .btn {
-    margin-bottom: 10px; } }
-
+.contact-btn,.header,.recent-works .section__heading{color:#f0f0f1}.btn,.contact-btn{overflow:hidden;text-decoration:none}.about,.blog,.blog__post__date,.header,.section__heading{text-align:center}.about__info,.about__picture,.header__content,.row-3{vertical-align:middle}.blog__post__footer__link,.btn,.contact-btn,.contact__social a,.intothevoid__link{text-decoration:none}h1,h2,h3,h4,h5,h6{font-family:Montserrat;font-weight:700;text-transform:uppercase}p{font-family:Lato}hr{border:1px solid #ec6759;width:100px}.wrap{width:1200px;margin:0 auto;transition:width .3s ease}.row-3{display:inline-block;width:30%}@media (max-width:1300px){.wrap{width:1000px;transition:width .3s ease}}@media (max-width:1080px){.wrap{width:780px;transition:width .3s ease}.row-3{display:block;width:100%}}@media (max-width:800px){.wrap{width:680px}}@media (max-width:700px){.wrap{width:100%;padding:0 20px;box-sizing:border-box;transition:width .3s ease}}.section{padding-top:50px}.section__heading{font-size:14px;margin-bottom:50px}.header{background-color:#2e2e2e;height:700px;display:table;width:100%}.header__content{display:table-cell}.header__logo--image{display:block;margin:0 auto 25px}.header__logo--text{font-size:14px;display:inline-block;position:relative;letter-spacing:4px;margin-bottom:50px}.btn,.welcome__greeting{letter-spacing:1px;text-transform:uppercase}.header__logo--text::after,.header__logo--text::before{content:"";display:block;position:absolute;left:0;right:0;height:2px;background-color:#ec6759}.header__logo--text::before{top:-10px}.header__logo--text::after{bottom:-11px}.welcome__greeting{font-weight:900;font-size:14px}.welcome__about{font-size:14px;font-weight:300;max-width:430px;margin:0 auto 60px;line-height:1.5}.contact-btn{border:2px solid #ec6759;border-radius:6px;display:inline-block;padding:17px 45px;font-size:11px;text-transform:uppercase;font-family:Montserrat;font-weight:700;position:relative}.contact-btn .contact-btn__text{position:relative;z-index:2}.contact-btn .contact-btn__bg{background-color:#ec6759;position:absolute;top:150%;bottom:150%;left:0;right:0;-webkit-transform:rotate(25deg);transform:rotate(25deg);transition:all .3s ease;z-index:1}.btn,.btn__text{position:relative}.contact-btn:hover .contact-btn__bg{bottom:-30%;left:-40%;right:-40%;top:-30%;transition:all .3s ease}.scrolldown-btn{background:url(../img/scroll-arrow.svg);display:block;width:45px;height:45px;border:none;margin:80px auto 0}.about{padding-bottom:60px}.about__picture{transition:all .3s ease;margin:0 50px}.about__info__heading{font-size:13px}.about__info__text{font-size:13px;line-height:1.8;transition:width .3s ease}@media (max-width:1300px){.about__picture{-webkit-transform:scale(.8);transform:scale(.8);margin:0 30px;transition:all .3s ease}}@media (max-width:1080px){.about__info__text{width:70%;margin:0 auto;transition:width .3s ease}.about__picture{margin:30px 0}}@media (max-width:600px){.about__info__text{width:100%;transition:width .3s ease}.about__picture{margin:15px 0}}.recent-works{background-color:#465256;height:400px}.btn{font-family:Montserrat;font-weight:600;font-size:11px;color:#fff;background-color:#ec6759;border-radius:6px;margin:60px auto;padding:15px 25px;display:inline-block;border:2px solid #ec6759;transition:all .3s}.btn:hover{color:#2e2e2e}.btn:hover .btn__bg{left:-100%;top:-100%;bottom:-100%;right:-100%}.btn__text{z-index:100}.btn__bg{position:absolute;z-index:50;top:150%;left:0;right:0;bottom:150%;-webkit-transform:rotate(-25deg);transform:rotate(-25deg);background-color:#fff;transition:all .4s ease}.blog__post:nth-child(2){margin:0 55px;transition:margin .3s ease}.blog__post__heading{font-size:13px;text-align:center}.blog__post__heading__link{color:inherit;text-decoration:none}.blog__post__date{font-size:11px;text-transform:uppercase;font-family:Montserrat}.blog__post__header-separator{border:1px solid #ec6759;width:100px}.blog__post__body{font-size:13px;font-family:Lato;line-height:1.8;margin-top:25px;text-align:left}.blog__post__footer__link,label{text-transform:uppercase;font-family:Montserrat}.blog__post__body em{font-style:italic;font-weight:900}.blog__post__footer{padding-top:15px;text-align:center}.blog__post__footer__link{font-size:11px;font-weight:900;color:#000;position:relative}.blog__post__footer__link::after{content:" ";display:block;position:absolute;bottom:-2px;left:52%;right:52%;height:2px;background-color:#ec6759;transition:all .2s ease}.blog__post__footer__link:hover{color:#2e2e2e;transition:all .2s}.contact,.contact .section__heading{color:#fff}.blog__post__footer__link:hover::after{left:0;right:0;transition:all .2s ease}@media (max-width:1300px){.blog__post:nth-child(2){margin:0 30px;transition:margin .3s ease}}@media (max-width:1080px){.blog__post{display:none}.blog__post:first-child{display:block}.blog__post__body{width:70%;margin:25px auto 0}}@media (max-width:600px){.blog__post__body{width:100%;text-align:center}}.contact{background-color:#465256;text-align:center}.contact__info,.contact__social{margin-top:-150px;vertical-align:middle}.contact__info__heading,.contact__social__heading{font-size:13px;text-align:center}.contact__info__body{font-size:13px;line-height:1.8;width:80%;margin:0 auto}.contact__info__body a{color:inherit;font-weight:400}.contact__form{margin:0 55px;transition:margin .3s ease}label{display:block;text-align:left;font-size:12px;margin-bottom:5px}.contact__form input,.contact__form textarea{display:block;background-color:#394549;border:none;width:100%;padding:10px 10px 11px;font-size:14px;border-right:5px solid #394549;border-left:5px solid #394549;border-radius:6px;transition:border-color .3s ease;box-sizing:border-box;margin-bottom:20px;font-family:Lato}.contact__form input:focus,.contact__form textarea:focus{outline:0;border-color:#2e383c;transition:border-color .3s ease}.contact__form textarea{resize:none}.contact__form .btn{margin-top:20px}.contact__form .btn__bg{background:#465256}.contact__form .btn:hover .btn__text,.contact__form .btn__text{color:#fff}.contact__social a{display:inline-block;margin:10px 5px}.contact__social a path{fill:#2e383c;transition:fill .3s ease}.contact__social a:hover path{fill:#fff;transition:fill .3s ease}@media (max-width:1300px){.contact__form{margin:0 30px;transition:margin .3s ease}}@media (max-width:1080px){.contact{padding-bottom:50px}.contact__info{display:none}.contact__social{margin-top:0}.contact__info__body{width:70%;font-size:14px}.contact__form{margin:50px 0}.contact__form input,.contact__form textarea{font-size:16px}.contact__form .btn{margin-bottom:10px}}.intothevoid{text-align:center;padding-bottom:80px}.intothevoid .section__heading{margin-bottom:0;margin-top:40px}.intothevoid__link{font-size:14px;font-family:Lato;color:#2e2e2e;transition:color .3s ease}.intothevoid__link:hover{color:#ec6759;transition:color .3s ease}.page-footer{height:200px;background-color:#2e2e2e;text-align:center;padding-top:65px;box-sizing:border-box}.page-footer img{-webkit-transform:scale(.7);transform:scale(.7)}
 /*# sourceMappingURL=index.css.map */
