--- a/resources/assets/sass/modules/_recent-works.sass
+++ b/resources/assets/sass/modules/_recent-works.sass
@@ -1,6 +1,64 @@
 .recent-works
 	background-color: $lightBlue
-	height: 400px
+	text-align: center
 
 	.section__heading
 		color: $lightGray
+
+.recent-works__work:nth-child(2)
+	margin: 0 55px
+	transition: margin .3s ease
+
+.recent-works__work__thumb-container
+	border-radius: 6px
+	overflow: hidden
+	max-width: 360px
+	margin: 0 auto
+	height: 200px
+
+.recent-works__work__heading
+	font-size: 13px
+	font-weight: 400
+	color: #fff
+
+.recent-works__work__link
+	color: inherit
+	text-decoration: none
+
+.recent-works__work__date
+	font-family: "Lato"
+	font-size: 12px
+	color: #fff
+	text-transform: uppercase
+
+.recent-works .btn
+	.btn__text
+		color: #fff
+
+	.btn__bg
+		background-color: $lightBlue
+
+@media (max-width:1300px)
+	.recent-works__work:nth-child(2)
+		margin: 0 30px
+		transition: margin .3s ease
+
+@media (max-width: 1080px)
+	.recent-works__work:nth-child(2)
+		margin: 50px 0
+
+@media (max-width: 700px)
+	.recent-works__work:nth-child(2)
+		margin-bottom: 0
+
+	.recent-works__work:nth-child(3)
+		display: none
+
+	.recent-works__work__thumbnail
+		width: 100%
+		height: auto
+
+@media (max-width: 500px)
+	.recent-works__work__thumb-container
+		max-width: none
+		height: 230px
