Decrease font weight on dark bg

--- a/resources/assets/sass/modules/_contact.sass
+++ b/resources/assets/sass/modules/_contact.sass
@@ -5,6 +5,7 @@
 
 	.section__heading
 		color: #fff
+		font-weight: 400
 
 .contact__info,
 .contact__social
@@ -15,6 +16,7 @@
 .contact__social__heading
 	font-size: 13px
 	text-align: center
+	font-weight: 400
 
 .contact__info__body
 	font-size: 13px
