--- a/resources/assets/sass/index.sass
+++ b/resources/assets/sass/index.sass
@@ -7,7 +7,8 @@
 @import "modules/about"
 @import "modules/recent-works"
 @import "modules/btn"
-@import "modules/recent-blog"
+@import "layout/recent-blog"
+@import "modules/blog-post-preview"
 @import "modules/contact"
 @import "modules/intothevoid"
 @import "modules/footer"
