--- a/resources/assets/sass/modules/_blog-post-preview.sass
+++ b/resources/assets/sass/modules/_blog-post-preview.sass
@@ -1,30 +1,22 @@
-.blog
-	text-align: center
-
-.blog__post
-	&:nth-child( 2 )
-		margin: 0 55px
-		transition: margin .3s ease
-
-.blog__post__heading
+.blog__post-preview__heading
 	font-size: 13px
 	text-align: center
 
-.blog__post__heading__link
+.blog__post-preview__heading__link
 	color: inherit
 	text-decoration: none
 
-.blog__post__date
+.blog__post-preview__date
 	font-size: 11px
 	text-transform: uppercase
 	font-family: "Montserrat"
 	text-align: center
 
-.blog__post__header-separator
+.blog__post-preview__header-separator
 	border: 1px solid $red
 	width: 100px
 
-.blog__post__body
+.blog__post-preview__body
 	font-size: 13px
 	font-family: "Lato"
 	line-height: 1.8
@@ -35,11 +27,11 @@
 		font-style: italic
 		font-weight: 900
 
-.blog__post__footer
+.blog__post-preview__footer
 	padding-top: 15px
 	text-align: center
 
-.blog__post__footer__link
+.blog__post-preview__footer__link
 	font-size: 11px
 	font-family: "Montserrat"
 	font-weight: 900
@@ -50,22 +42,22 @@
 	+middle-line( $red )
 
 @media (max-width: 1300px)
-	.blog__post:nth-child( 2 )
+	.blog__post-preview:nth-child( 2 )
 		margin: 0 30px
 		transition: margin .3s ease
 
 @media (max-width: 1080px)
-	.blog__post
+	.blog__post-preview
 		display: none
 
-	.blog__post:first-child
+	.blog__post-preview:first-child
 		display: block
 
-	.blog__post__body
+	.blog__post-preview__body
 		width: 70%
 		margin: 25px auto 0
 
 @media (max-width: 600px)
-	.blog__post__body
+	.blog__post-preview__body
 		width: 100%
 		text-align: center
