--- a/resources/assets/sass/modules/_blog-post.sass
+++ b/resources/assets/sass/modules/_blog-post.sass
@@ -1,3 +1,5 @@
+@import "modules/blog-post-preview"
+
 .post
 	background-color: #fff
 	padding: 30px 0
@@ -9,7 +11,19 @@
 
 .post__content
 	width: 60%
+	margin-right: 10%
+
+	p
+		line-height: 1.7
 
 .viewmore
 	width: 30%
 	padding: 0
+	vertical-align: top
+
+.viewmore__posts
+	padding-left: 0
+
+.viewmore__heading
+	text-align: center
+	margin-bottom: 35px
