--- a/resources/assets/sass/modules/_hero.sass
+++ b/resources/assets/sass/modules/_hero.sass
@@ -12,6 +12,7 @@
 .hero__content
 	display: inline-block
 	background-color: #fff
+	box-shadow: 0 0 15px rgba( 0, 0, 0, .1 )
 	top: 50%
 	left: 50%
 	transform: translateX(-50%) translateY(-50%)
