Fix headings map

--- a/resources/assets/sass/modules/_header.sass
+++ b/resources/assets/sass/modules/_header.sass
@@ -18,6 +18,9 @@
 	font-size: 14px
 	display: inline-block
 	position: relative
+	text-transform: uppercase
+	font-weight: 900
+	font-family: "Montserrat"
 	letter-spacing: 4px
 	margin-bottom: 50px
 
