--- a/www/css/blog-post.css
+++ b/www/css/blog-post.css
@@ -1,3 +1,7 @@
+.page-title--hidden {
+  position: absolute;
+  left: -99999px; }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat';
   font-weight: 700;
@@ -86,39 +90,39 @@ ul {
 .hero__date {
   text-align: center; }
 
-.blog__post-preview__heading {
+.blog__post-preview .post__heading {
   font-size: 13px;
   text-align: center; }
 
-.blog__post-preview__heading__link {
+.blog__post-preview .post__heading__link {
   color: inherit;
   text-decoration: none; }
 
-.blog__post-preview__date {
+.blog__post-preview .post__date {
   font-size: 11px;
   text-transform: uppercase;
   font-family: "Montserrat";
   text-align: center; }
 
-.blog__post-preview__header-separator {
+.blog__post-preview .post__header-separator {
   border: 1px solid #ec6759;
   width: 100px; }
 
-.blog__post-preview__body {
+.blog__post-preview .post__body {
   font-size: 13px;
   font-family: "Lato";
   line-height: 1.8;
   margin-top: 25px;
   text-align: left; }
-  .blog__post-preview__body em {
+  .blog__post-preview .post__body em {
     font-style: italic;
     font-weight: 900; }
 
-.blog__post-preview__footer {
+.blog__post-preview .post__footer {
   padding-top: 15px;
   text-align: center; }
 
-.blog__post-preview__footer__link {
+.blog__post-preview .post__footer__link {
   font-size: 11px;
   font-family: "Montserrat";
   font-weight: 900;
@@ -126,7 +130,7 @@ ul {
   text-decoration: none;
   color: #000;
   position: relative; }
-  .blog__post-preview__footer__link::after {
+  .blog__post-preview .post__footer__link::after {
     content: " ";
     display: block;
     position: absolute;
@@ -136,10 +140,10 @@ ul {
     height: 2px;
     background-color: #ec6759;
     transition: all 0.2s ease; }
-  .blog__post-preview__footer__link:hover {
+  .blog__post-preview .post__footer__link:hover {
     color: #2e2e2e;
     transition: all 0.2s; }
-  .blog__post-preview__footer__link:hover::after {
+  .blog__post-preview .post__footer__link:hover::after {
     left: 0;
     right: 0;
     transition: all 0.2s ease; }
@@ -152,14 +156,14 @@ ul {
 @media (max-width: 1080px) {
   .blog__post-preview {
     display: none; }
-  .blog__post-preview:first-child {
-    display: block; }
-  .blog__post-preview__body {
-    width: 70%;
-    margin: 25px auto 0; } }
+    .blog__post-preview:first-child {
+      display: block; }
+    .blog__post-preview .post__body {
+      width: 70%;
+      margin: 25px auto 0; } }
 
 @media (max-width: 600px) {
-  .blog__post-preview__body {
+  .blog__post-preview .post__body {
     width: 100%;
     text-align: center; } }
 
