--- a/resources/assets/sass/modules/_blog-post-preview.sass
+++ b/resources/assets/sass/modules/_blog-post-preview.sass
@@ -1,45 +1,47 @@
-.blog__post-preview__heading
-	font-size: 13px
-	text-align: center
+.blog__post-preview
 
-.blog__post-preview__heading__link
-	color: inherit
-	text-decoration: none
+	.post__heading
+		font-size: 13px
+		text-align: center
 
-.blog__post-preview__date
-	font-size: 11px
-	text-transform: uppercase
-	font-family: "Montserrat"
-	text-align: center
+	.post__heading__link
+		color: inherit
+		text-decoration: none
 
-.blog__post-preview__header-separator
-	border: 1px solid $red
-	width: 100px
+	.post__date
+		font-size: 11px
+		text-transform: uppercase
+		font-family: "Montserrat"
+		text-align: center
 
-.blog__post-preview__body
-	font-size: 13px
-	font-family: "Lato"
-	line-height: 1.8
-	margin-top: 25px
-	text-align: left
+	.post__header-separator
+		border: 1px solid $red
+		width: 100px
 
-	em
-		font-style: italic
+	.post__body
+		font-size: 13px
+		font-family: "Lato"
+		line-height: 1.8
+		margin-top: 25px
+		text-align: left
+
+		em
+			font-style: italic
+			font-weight: 900
+
+	.post__footer
+		padding-top: 15px
+		text-align: center
+
+	.post__footer__link
+		font-size: 11px
+		font-family: "Montserrat"
 		font-weight: 900
+		text-transform: uppercase
+		text-decoration: none
+		color: #000
 
-.blog__post-preview__footer
-	padding-top: 15px
-	text-align: center
-
-.blog__post-preview__footer__link
-	font-size: 11px
-	font-family: "Montserrat"
-	font-weight: 900
-	text-transform: uppercase
-	text-decoration: none
-	color: #000
-
-	+middle-line( $red )
+		+middle-line( $red )
 
 @media (max-width: 1300px)
 	.blog__post-preview:nth-child( 2 )
@@ -50,14 +52,15 @@
 	.blog__post-preview
 		display: none
 
-	.blog__post-preview:first-child
-		display: block
+		&:first-child
+			display: block
 
-	.blog__post-preview__body
-		width: 70%
-		margin: 25px auto 0
+		.post__body
+			width: 70%
+			margin: 25px auto 0
 
 @media (max-width: 600px)
-	.blog__post-preview__body
-		width: 100%
-		text-align: center
+	.blog__post-preview
+		.post__body
+			width: 100%
+			text-align: center
