Add sidebar layout

--- a/resources/assets/sass/blog-post.sass
+++ b/resources/assets/sass/blog-post.sass
@@ -2,6 +2,7 @@
 @import "imports/link-effects"
 @import "base/base"
 @import "layout/layout"
+@import "layout/sidebar"
 @import "layout/section"
 @import "modules/hero"
 @import "modules/blog-post"
