--- a/www/css/blog-post.css
+++ b/www/css/blog-post.css
@@ -1,4 +1,4 @@
-.page-title--hidden {
+.title--hidden {
   position: absolute;
   left: -99999px; }
 
@@ -50,6 +50,9 @@ ul {
     padding: 0 20px;
     box-sizing: border-box;
     transition: width 0.3s ease; } }
+
+.sidebar__item {
+  margin-bottom: 60px; }
 
 .section {
   padding-top: 50px; }
